Fix flickering CSS, 'undefined' class name.

--- a/src/styles/components/misc.scss
+++ b/src/styles/components/misc.scss
@@ -72,3 +72,8 @@
 .beevenue-OtpLinks-OtpLink {
   color: #000;
 }
+
+.beevenue-GoogleLoginContainer {
+  height: 40px;
+  overflow: hidden;
+}
